Fix: fixing secret

--- a/k8s-config/01-secret.yaml
+++ b/k8s-config/01-secret.yaml
@@ -4,6 +4,5 @@ metadata:
   name: casino-secret
 type: Opaque
 data:
-  # Thay thế các chuỗi dưới đây bằng mã Base64 thực tế của bạn
-  db-password: ${DB_PASSWORD_BASE64}
-  mail-password: ${MAIL_PASSWORD_BASE64}
+  db-password: ${DB_PASSWORD_PLAIN}
+  mail-password: ${MAIL_PASSWORD_PLAIN}
