--- a/k8s-config/01-secret.yaml
+++ b/k8s-config/01-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: casino-secret
 type: Opaque
-data:
-  db-password: ${DB_PASSWORD_PLAIN}
+stringData:
+  db-password: "${DB_PASSWORD_PLAIN}"
   mail-password: ${MAIL_PASSWORD_PLAIN}
