--- a/k8s-config/03-db-setup.yaml
+++ b/k8s-config/03-db-setup.yaml
@@ -39,19 +39,10 @@ spec:
           livenessProbe:
             exec:
               command:
-                [
-                  "/opt/mssql-tools18/bin/sqlcmd",
-                  "-S",
-                  "localhost",
-                  "-U",
-                  "sa",
-                  "-P",
-                  "$(MSSQL_SA_PASSWORD)",
-                  "-Q",
-                  "SELECT 1",
-                  "-C",
-                ]
-            initialDelaySeconds: 30
+                - /bin/bash
+                - -c
+                - "/opt/mssql-tools18/bin/sqlcmd -S 127.0.0.1 -U sa -P $MSSQL_SA_PASSWORD -Q \"SELECT 1\" -C"
+            initialDelaySeconds: 45 
             periodSeconds: 10
 ---
 apiVersion: v1
