--- a/k8s-config/04-app-setup.yaml
+++ b/k8s-config/04-app-setup.yaml
@@ -17,7 +17,7 @@ spec:
       - name: db-init
         image: mcr.microsoft.com/mssql/server:2022-latest
         env:
-        - name: DB_PASSWORD
+        - name: SQLCMDPASSWORD
           valueFrom:
             secretKeyRef:
               name: casino-secret
@@ -26,7 +26,7 @@ spec:
         args:
         - |
           sleep 15;
-          /opt/mssql-tools18/bin/sqlcmd -S db-sqlserver -U sa -P "${DB_PASSWORD}" -Q "IF NOT EXISTS (SELECT * FROM sys.databases WHERE name = 'CASINO_DB') CREATE DATABASE CASINO_DB" -C
+          /opt/mssql-tools18/bin/sqlcmd -S db-sqlserver -U sa -Q "IF NOT EXISTS (SELECT * FROM sys.databases WHERE name = 'CASINO_DB') CREATE DATABASE CASINO_DB" -C
       
       # CONTAINER CHÍNH
       containers:
